tests/sumo/extended/vaporizer/errors/begin_empty/errors.sumo
Error: Attribute 'begin' in definition of a vaporizer is empty.
Quitting (on error).
